tests/baselines/reference/FunctionPropertyAssignments1_es6.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments1_es6.ts(1,11): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments1_es6.ts (1 errors) ====
    var v = { *foo() { } }
              ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.